--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "SprucedUp",
   "version": "0.1.0",
   "homepage": "https://davidpak.github.io/SprucedUp/",
   "private": true,
